syntax = "proto3";

package edu.uci.ics.amber.engine.common;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  scope: FILE,
  preserve_unknown_fields: false
  no_default_values_in_constructor: true
};

enum WorkerState {
  Uninitialized = 0;
  Ready = 1;
  Running = 2;
  Paused = 3;
  Completed = 4;

}

message WorkerStatistics{
  WorkerState workerState = 1 [(scalapb.field).no_box = true];
  int64 inputRowCount = 2;
  int64 outputRowCount = 3;

}
